<resources>
    <string name="app_name">Medical App</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="to_continue_login_now">To Continue , Login Now</string>
    <string name="phone_number"><color><b>|</b></color> Phone Number</string>
    <string name="password"><b>|</b> Password</string>
    <string name="login">Login</string>
    <string name="forget_password"><u>Forget password ?</u></string>

</resources>