<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/shadowtop"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintHeight_percent="0.40"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintHeight_percent="0.30"
        android:scaleType="fitXY"
        android:src="@drawable/shadowtwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/first_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/logooo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_guide"/>
    <TextView
        android:id="@+id/textOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome_back"
        android:textColor="@color/mint_green"
        android:paddingTop="@dimen/_5sdp"
        android:textSize="@dimen/_20ssp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textOne"
        app:layout_constraintStart_toStartOf="@id/textOne"
        android:paddingStart="@dimen/_20sdp"
        android:text="@string/to_continue_login_now"
        android:textColor="@color/grey"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"/>
    <EditText
        android:id="@+id/boxOne"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/phone_number"
        android:textAlignment="viewStart"
        android:inputType="phone"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/g2"
        android:background="@drawable/textinput"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:drawablePadding="@dimen/_5sdp"
        android:drawableStart="@drawable/call"/>
    <EditText
        android:id="@+id/boxTwo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textAlignment="viewStart"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/boxOne"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:paddingStart="@dimen/_5sdp"
        android:background="@drawable/textinput"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableStart="@drawable/password"
        android:paddingEnd="@dimen/_30sdp"
        android:drawablePadding="@dimen/_5sdp"
        android:maxLines="1"
       />
    <ImageView
        android:id="@+id/eye_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eye"
        app:layout_constraintEnd_toEndOf="@id/boxTwo"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@id/boxTwo"
        app:layout_constraintBottom_toBottomOf="@id/boxTwo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/boxTwo"
        app:layout_constraintEnd_toEndOf="@id/boxTwo"
        android:layout_marginEnd="@dimen/_10sdp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cornerRadius="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/boxTwo"
        android:layout_marginTop="@dimen/_30sdp"
        android:backgroundTint="@color/mint_green"
        android:text="@string/login"
        android:maxLength="10"
        android:maxLines="1"
        android:textSize="@dimen/_12ssp"
        />









</androidx.constraintlayout.widget.ConstraintLayout>